# QtPoker

./: CMakeLists.txt  Card.h  Main.qml  cards.h  community_cards.cpp  community_cards.h  deck.cpp  deck.h  hands.h  main.cpp  player_hand.cpp  player_hand.h  poker_game.cpp  poker_game.h  resource.qrc
test_PokerTime/: CMakeLists.txt  main.cpp  test_deck.cpp  test_deck.h  test_player_hand.cpp  test_player_hand.h  test_pokertimetests.cpp
